@@ -809,6 +809,7 @@ ACATSDIR = $(TESTSUITEDIR)/ada/acats
 check-gnat:
 	test -d $(ACATSDIR) || mkdir -p $(ACATSDIR)
 	testdir=`cd ${srcdir}/${ACATSDIR}; ${PWD_COMMAND}`; \
+	EXPECT=${EXPECT} ; export EXPECT ; \
 	export testdir; cd $(ACATSDIR); $${testdir}/run_acats $(CHAPTERS)
 
 .PHONY: check-gnat
