@@ -28,7 +28,7 @@
 @setchapternewpage odd
 
 
-@dircategory Programming
+@dircategory GNU Ada tools
 @direntry
 * gnat-style: (gnat-style).      GNAT Coding Style
 @end direntry
