@@ -1,3 +1,13 @@
+2004-11-28  James A. Morrison  <ja2morri@csclub.uwaterloo.ca>
+
+	PR ada/18302
+	* Make-lang.in (check-gnat): Set EXPECT environment variable.
+
+2004-10-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* gnat_ugn.texi: Add : and . to direntry.
+	* gnat-style.texi: Change dircategory to GNU Ada tools.
+
 2005-02-08  Jakub Jelinek  <jakub@redhat.com>
 
 	* Makefile.in (gnatlib-shared-default): Disallow dlopening of
